@@ -1,0 +1,14 @@
+/*
+ * $Id$
+ */
+
+#ifndef __VIDEO_H__
+#define __VIDEO_H__
+
+
+void
+video_switch(void);
+
+
+#endif /* !__VIDEO_H__ */
+
